RESOLVED FIXED243109
xhr/json.any.html WPT test is failing in WebKit
https://bugs.webkit.org/show_bug.cgi?id=243109
Summary xhr/json.any.html WPT test is failing in WebKit
Chris Dumez
Reported 2022-07-22 12:38:43 PDT
xhr/json.any.html WPT test is failing in WebKit but passing in Gecko and Blink.
Attachments
Chris Dumez
Comment 1 2022-07-22 12:41:22 PDT
EWS
Comment 2 2022-07-26 11:38:21 PDT
Committed 252838@main (c74e2dd4d588): <https://commits.webkit.org/252838@main> Reviewed commits have been landed. Closing PR #2667 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-26 11:40:10 PDT
Ahmad Saleem
Comment 4 2022-08-06 07:52:08 PDT
*** Bug 223441 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.