xhr/json.any.html WPT test is failing in WebKit https://bugs.webkit.org/show_bug.cgi?id=243109

Reviewed by Darin Adler.

Force UTF-8 decoding for XHR response when responseType is json.
This aligns our behavior with Blink and Gecko.

* LayoutTests/imported/w3c/web-platform-tests/xhr/json.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/xhr/json.any.worker-expected.txt:
* Source/WebCore/loader/TextResourceDecoder.cpp:
(WebCore::TextResourceDecoder::setEncoding):
(WebCore::TextResourceDecoder::checkForBOM):
* Source/WebCore/loader/TextResourceDecoder.h:
(WebCore::TextResourceDecoder::setAlwaysUseUTF8):
* Source/WebCore/xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::createDecoder const):

Canonical link: https://commits.webkit.org/252838@main